RESOLVED FIXED321088
[block-in-inline] Trailing whitespace is not collapsed before a block nested in an inline box
https://bugs.webkit.org/show_bug.cgi?id=321088
Summary [block-in-inline] Trailing whitespace is not collapsed before a block nested ...
alan
Reported 2026-08-05 07:21:15 PDT
ssia
Attachments
[fast-cq]Patch (6.55 KB, patch)
2026-08-05 09:19 PDT, alan
no flags
alan
Comment 1 2026-08-05 09:19:51 PDT
Created attachment 480938 [details] [fast-cq]Patch
EWS
Comment 2 2026-08-05 12:48:17 PDT
Committed 318653@main (2bcee61b68de): <https://commits.webkit.org/318653@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 480938 [details].
Radar WebKit Bug Importer
Comment 3 2026-08-05 12:49:13 PDT
Note You need to log in before you can comment on or make changes to this bug.